--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an aspiring developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Yarmouth, ME</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Skiing, running, video games, debate</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To be my own boss and create a great product</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Boulder, CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to the have the tools to create a diverse array of products that can help people all over the world</p>
     </section>
 
     <footer id="footer">
