testing git on new new computer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Boulder, CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I want to the have the tools to create a diverse array of products that can help people all over the world</p>
+      <p>I want to the have the tools to create a diverse array of products that can help people all over the world. I have always loved technology and inovation and I felt that this was the perfect entry point for me.</p>
     </section>
 
     <footer id="footer">
